--- a/about.html
+++ b/about.html
@@ -186,12 +186,9 @@
           </h2>
           <div class="description js-block">
             <p class="paragraph">
-              It is not enough that we build products that function, that are
-              understandable and usable, we also need to build products that
-              bring joy and excitement, pleasure and fun, and, yes, beauty to
-              people’s lives. Creativity is to discover a question that has
-              never been asked. If one brings up an idiosyncratic question, the
-              answer he gives will necessarily be unique as well.
+              Creativity is to discover a question that has never been asked. If
+              one brings up an idiosyncratic question, the answer he gives will
+              necessarily be unique as well.
             </p>
           </div>
         </div>
