--- a/about.html
+++ b/about.html
@@ -178,12 +178,31 @@
           <h4 class="title title--overhead js-lines">What I can do</h4>
         </div>
         <div class="col-12 col-lg-9">
-          <h2 class="title title--h4 js-lines">
-            It is not enough that we build products that function, that are
-            understandable and usable, we also need to build products that bring
-            joy and excitement, pleasure and fun, and, yes, beauty to people’s
-            lives.
-          </h2>
+          <h5 class="title title--h6 js-lines">
+            UX/UI Design
+          </h5>
+          <div class="description js-block">
+            <p class="paragraph">
+              Creativity is to discover a question that has never been asked. If
+              one brings up an idiosyncratic question, the answer he gives will
+              necessarily be unique as well.
+            </p>
+          </div>
+
+          <h5 class="title title--h6 js-lines">
+            Product Ownership
+          </h5>
+          <div class="description js-block">
+            <p class="paragraph">
+              Creativity is to discover a question that has never been asked. If
+              one brings up an idiosyncratic question, the answer he gives will
+              necessarily be unique as well.
+            </p>
+          </div>
+
+          <h5 class="title title--h6 js-lines">
+            Research & Strategy
+          </h5>
           <div class="description js-block">
             <p class="paragraph">
               Creativity is to discover a question that has never been asked. If
@@ -192,8 +211,12 @@
             </p>
           </div>
         </div>
-        <div class="col-6 col-md-4 col-lg-3 offset-lg-3 ">
-          <h4 class="title title--h6 title--subtitle">STRATEGY & DESIGN</h4>
+
+        <div class="col-12 col-lg-3">
+          <h4 class="title title--overhead js-lines">What I use</h4>
+        </div>
+        <div class="col-6 col-md-4 col-lg-3 ">
+          <h4 class="title title--h6 title--subtitle">Design</h4>
           <ul class="list-unstyled">
             <li>User Research</li>
             <li>Wireframing / Prototyping</li>
@@ -203,7 +226,7 @@
           </ul>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <h4 class="title title--h6 title--subtitle">DEVELOPMENT</h4>
+          <h4 class="title title--h6 title--subtitle">Development</h4>
           <ul class="list-unstyled">
             <li>HTML/CSS</li>
             <li>Bootstrap</li>
@@ -213,7 +236,7 @@
           </ul>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <h4 class="title title--h6 title--subtitle">TOOLS</h4>
+          <h4 class="title title--h6 title--subtitle">Software</h4>
           <ul class="list-unstyled">
             <li>Sketch / Adobe XD</li>
             <li>Photoshop / Illustrator / InDesign</li>
